ajout de navbar

--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": ["node_modules/jquery/dist/jquery.min.js" ,
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"]
           },
           "configurations": {
             "production": {
@@ -127,5 +128,8 @@
       }
     }
   },
-  "defaultProject": "cinemaSnouss-front"
+  "defaultProject": "cinemaSnouss-front",
+  "cli": {
+    "analytics": false
+  }
 }
