--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@angular/router": "~11.0.1",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
-    "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
